welcome.lessons.welcome.array.has271.Has271.scala.error
has271:12: error: Unmatched closing brace '}' ignored here
			} else if (nums(i+1) == nums(i)+5 && nums(i+2) <= nums(i)+1 && nums(i+2) >= nums(i)-1)  {
                        ^has271:12: error: ';' expected but 'else' found.
			} else if (nums(i+1) == nums(i)+5 && nums(i+2) <= nums(i)+1 && nums(i+2) >= nums(i)-1)  {
                          ^has271:20: error: Unmatched closing brace '}' ignored here
 }
 ^